--- a/index.ipynb
+++ b/index.ipynb
@@ -1247,7 +1247,7 @@
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    diff_in_attend = second_show['attendence'] "
+    "    diff_in_attend = second_show['attendence'] - first_show['attendence']"
    ]
   },
   {
