--- a/index.ipynb
+++ b/index.ipynb
@@ -1248,7 +1248,7 @@
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
     "    diff_in_attend = (second_show['attendence'] - first_show['attendence'])\n",
-    "    diff_in_budget = (second_show)"
+    "    diff_in_budget = (second_show['budget'] )"
    ]
   },
   {
