Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1249,7 +1249,7 @@
     "def marginal_return_on_budget(first_show, second_show):\n",
     "    diff_in_attend = (second_show['attendence'] - first_show['attendence'])\n",
     "    diff_in_budget = (second_show['budget'] - first_show['budget'])\n",
-    "    return "
+    "    return diff_in_attend"
    ]
   },
   {
