--- a/index.ipynb
+++ b/index.ipynb
@@ -1242,12 +1242,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    diff_in_attend = (second_show['attendence'] - first_show['attendence'])\n",
+    "    diff_in_attend = (second_show['attendance'] - first_show['attendance'])\n",
     "    diff_in_budget = (second_show['budget'] - first_show['budget'])\n",
     "    return (diff_in_attend/diff_in_budget)"
    ]
