--- a/index.ipynb
+++ b/index.ipynb
@@ -1415,7 +1415,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    sorted_values = sorte"
+    "    sorted_values = sorted_points(x_values)"
    ]
   },
   {
