--- a/index.ipynb
+++ b/index.ipynb
@@ -1416,7 +1416,7 @@
    "source": [
     "def slope(x_values, y_values):\n",
     "    sorted_values = sorted_points(x_values, y_values)\n",
-    "    \n",
+    "    x1 = sorted_values[0]\n",
     "        "
    ]
   },
