--- a/index.ipynb
+++ b/index.ipynb
@@ -1417,7 +1417,7 @@
     "def slope(x_values, y_values):\n",
     "    sorted_values = sorted_points(x_values, y_values)\n",
     "    x1 = sorted_values[0][0]\n",
-    "    y1 = \n",
+    "    y1 = sorted_values[0]\n",
     "        "
    ]
   },
