--- a/index.ipynb
+++ b/index.ipynb
@@ -1418,7 +1418,7 @@
     "    sorted_values = sorted_points(x_values, y_values)\n",
     "    x1 = sorted_values[0][0]\n",
     "    y1 = sorted_values[0][1]\n",
-    "    x2 = s\n",
+    "    x2 = sorted_values[-1]\n",
     "        "
    ]
   },
