--- a/index.ipynb
+++ b/index.ipynb
@@ -1461,7 +1461,7 @@
     "def y_intercept(x_values, y_values, m = None):\n",
     "    if m == None:\n",
     "        m = slope(x_values, y_values)\n",
-    "    sorted_values = sorted_poi\n",
+    "    sorted_values = sorted_points(x_values, y_values)\n",
     "    "
    ]
   },
