--- a/index.ipynb
+++ b/index.ipynb
@@ -1462,6 +1462,7 @@
     "    if m == None:\n",
     "        m = slope(x_values, y_values)\n",
     "    sorted_values = sorted_points(x_values, y_values)\n",
+    "    highest\n",
     "    "
    ]
   },
