--- a/index.ipynb
+++ b/index.ipynb
@@ -1463,6 +1463,7 @@
     "        m = slope(x_values, y_values)\n",
     "    sorted_values = sorted_points(x_values, y_values)\n",
     "    highest = sorted_values[-1]\n",
+    "    intercep\n",
     "    "
    ]
   },
