--- a/index.ipynb
+++ b/index.ipynb
@@ -1463,7 +1463,8 @@
     "        m = slope(x_values, y_values)\n",
     "    sorted_values = sorted_points(x_values, y_values)\n",
     "    highest = sorted_values[-1]\n",
-    "    intercept = highest[1] - hg\n",
+    "    intercept = highest[1] - highest[0]\n",
+    "    return intercept\n",
     "    "
    ]
   },
