--- a/index.ipynb
+++ b/index.ipynb
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1463,23 +1463,23 @@
     "        m = slope(x_values, y_values)\n",
     "    sorted_values = sorted_points(x_values, y_values)\n",
     "    highest = sorted_values[-1]\n",
-    "    intercept = highest[1] - highest[0]\n",
+    "    intercept = highest[1] - m*highest[0]\n",
     "    return intercept\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "300"
+       "100.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1490,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -1498,10 +1498,10 @@
     {
      "data": {
       "text/plain": [
-       "300"
+       "10.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
