--- a/index.ipynb
+++ b/index.ipynb
@@ -1558,14 +1558,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'budget': 300, 'attendance': 700}, {'budget': 400, 'attendance': 900}]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first_show = {'budget': 300, 'attendance': 700}\n",
     "second_show = {'budget': 400, 'attendance': 900}\n",
     "\n",
-    "shows = [first_show, second_show]"
+    "shows = [first_show, second_show]\n",
+    "shows\n"
    ]
   },
   {
