--- a/index.ipynb
+++ b/index.ipynb
@@ -1587,7 +1587,7 @@
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
-    "    ret"
+    "    return "
    ]
   },
   {
