--- a/index.ipynb
+++ b/index.ipynb
@@ -1582,12 +1582,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
-    "    return (m*(x_v))"
+    "    return (m*(x_value)+b)"
    ]
   },
   {
