--- a/index.ipynb
+++ b/index.ipynb
@@ -1638,7 +1638,9 @@
     "comedy_shows = [first_show, second_show, third_show, fourth_show]\n",
     "\n",
     "show_x_values = list(map(lambda show: show['budget'], comedy_shows))\n",
-    "show_y_values = list(map(lambda show: show['attendance'], comedy_shows))"
+    "show_y_values = list(map(lambda show: show['attendance'], comedy_shows))\n",
+    "show_x_values\n",
+    "show_y_values"
    ]
   },
   {
